# JAX

./: .gitignore  AUDIT.md  CMakeLists.txt  todo.md
.github/workflows/: ci.yml
benchmarks/: ops_benchmark.py
cpp/: CMakeLists.txt  allocator.cpp  autodiff.cpp  codegen.cpp  dynamic_compiler.cpp  jit.cpp  jit_engine.cpp  op.cpp  optimizer.cpp  pybind.cpp  tensor.cpp  tvm_header_test.cpp  variable.cpp  vmap.cpp
cpp/include/: allocator.h  autodiff.h  codegen.h  dynamic_compiler.h  exception.h  jit.h  jit_engine.h  op.h  optimizer.h  pybind11  tensor.h  variable.h  vmap.h
cpp/tests/: main.cpp  test_advanced_optimizer.cpp  test_allocator.cpp  test_autodiff.cpp  test_codegen.cpp
python/: __init__.py  axe.py
python/axe/: __init__.py
python/axe/amp/: __init__.py  autocast_mode.py  grad_scaler.py
python/axe/nn/: __init__.py  attention.py  batchnorm.py  conv.py  dropout.py  linear.py  module.py  sequential.py
python/axe/optim/: __init__.py  adam.py  adamw.py  lr_scheduler.py  optimizer.py  sgd.py
tests/: test_amp.py  test_autodiff.py  test_checkpoint.py  test_errors.py  test_functional.py  test_jit.py  test_lr_scheduler.py  test_memory.py  test_model_surgery.py  test_nn.py  test_oom.py  test_ops.py  test_tensor.py  test_vmap.py
